--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.html
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="number-input-wrap">
       <label for="question-number">Số câu</label>
-      <input class="number-input" id="question-number" type="text" />
+      <input class="number-input" id="question-number" type="text"/>
       <label for="grade">Số điểm</label>
-      <input class="number-input" id="grade" type="text" />
+      <input class="number-input" id="grade" type="text"/>
     </div>
   </div>
 </div>
@@ -15,7 +15,7 @@
       <li class="question">
         <div class="question-name">
           <p class="question-name-number">Câu 1:</p>
-          <input placeholder="Type something..." class="question-name-input" type="text">
+          <input class="question-name-input" placeholder="Type something..." type="text">
         </div>
         <p class="correct-answer">Đáp án đúng</p>
         <div class="answer correct"><input class="answer-input" placeholder="Type something..." type="text"></div>
@@ -28,7 +28,7 @@
       <li class="question">
         <div class="question-name">
           <p class="question-name-number">Câu 2:</p>
-          <input placeholder="Type something..." class="question-name-input" type="text">
+          <input class="question-name-input" placeholder="Type something..." type="text">
         </div>
         <p class="correct-answer">Đáp án đúng</p>
         <div class="answer correct"><input class="answer-input" placeholder="Type something..." type="text"></div>
