--- a/src/app/pages/home/teacher-home/teacher-home.component.html
+++ b/src/app/pages/home/teacher-home/teacher-home.component.html
@@ -12,7 +12,7 @@
       <th>Ngày đóng</th>
       <th>Trạng thái</th>
     </tr>
-    <tr *ngFor="let examSession of examSessionList" (click)="navigateExamSessionDashBoard(examSession.id)">
+    <tr (click)="navigateExamSessionDashBoard(examSession.id)" *ngFor="let examSession of examSessionList">
       <td>
         <p class="exam-name">{{ examSession.name }} - {{ examSession.description }}</p>
         <p class="class-code">Mã lớp: {{ examSession.code }}</p>
