--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
@@ -1,10 +1,11 @@
 <div class="container">
   <div class="search-bar">
     <div class="search">
-      <img ngSrc="/icon/find_icon.svg" alt="search icon" class="search-icon" height="16" width="16">
-      <input type="text" [(ngModel)]="searchTerm" (keyup.enter)="filterExam()" (input)="filterExam()" placeholder="Nhập tên đề thi">
+      <img alt="search icon" class="search-icon" height="16" ngSrc="/icon/find_icon.svg" width="16">
+      <input (input)="filterExam()" (keyup.enter)="filterExam()" [(ngModel)]="searchTerm" placeholder="Nhập tên đề thi"
+             type="text">
       <div class="create-button">
-        <button (click)="navigateToCreatExam()" >Tạo đề mới</button>
+        <button (click)="navigateToCreatExam()">Tạo đề mới</button>
       </div>
     </div>
   </div>
