--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/home/home.component.scss
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/home/home.component.scss
@@ -134,3 +134,67 @@
     }
   }
 }
+
+// MODEL POPUP
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modal {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  width: 400px;
+}
+
+.modal h3 {
+  margin-top: 0;
+  font-size: 20px;
+}
+
+.modal-actions {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.modal-actions button {
+  width: 120px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.confirm-btn {
+  background: linear-gradient(45deg, #28a745, #218838);
+  color: white;
+}
+
+.confirm-btn:hover {
+  background: linear-gradient(45deg, #218838, #1e7e34);
+  transform: scale(1.05);
+}
+
+.cancel-btn {
+  background: linear-gradient(45deg, #dc3545, #c82333);
+  color: white;
+}
+
+.cancel-btn:hover {
+  background: linear-gradient(45deg, #c82333, #a71d2a);
+  transform: scale(1.05);
+}
