--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.scss
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.scss
@@ -4,133 +4,144 @@ $light-gray: #f5f5f5;
 $hover-bg: #f1faff;
 .container {
   position: relative;
-}
 
-.search-bar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: sticky;
-  top: 0;
-  z-index: 101;
-  background: #ffffff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 10px 20px;
-  border-radius: 8px;
-}
-
-.search {
-  display: flex;
-  align-items: center;
-  flex-grow: 1;
-  padding: 8px 15px;
-  border: 2px solid transparent;
-  border-radius: 6px;
-  transition: border 0.3s;
-
-  &:focus-within {
-    border: 2px solid $primary-color;
-    box-shadow: 0 0 8px rgba(4, 170, 109, 0.5);
+  .search-bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 80px;
+    right: 0;
+    z-index: 101;
+    width: 85%;
+    background: #ffffff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 10px 20px;
+    border-radius: 8px;
   }
 
-  img.search-icon {
-    margin-right: 10px;
-    width: 18px;
-    height: 18px;
-  }
-
-  input {
-    flex: 1;
-    padding: 10px;
-    font-size: 1.4rem;
-    border: none;
-    outline: none;
-  }
-}
-
-.create-button {
-  button {
-    padding: 12px 18px;
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: #fff;
-    background-color: $primary-color;
-    border: none;
+  .search {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    padding: 8px 15px;
+    border: 2px solid transparent;
     border-radius: 6px;
-    cursor: pointer;
-    transition: background 0.3s;
+    transition: border 0.3s;
+
+    &:focus-within {
+      border: 2px solid $primary-color;
+      box-shadow: 0 0 8px rgba(4, 170, 109, 0.5);
+    }
+
+    img.search-icon {
+      margin-right: 10px;
+      width: 18px;
+      height: 18px;
+    }
+
+    input {
+      flex: 1;
+      padding: 10px;
+      font-size: 1.4rem;
+      border: none;
+      outline: none;
+    }
+  }
+
+  .create-button {
+    button {
+      padding: 12px 18px;
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: #fff;
+      background-color: $primary-color;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.3s;
+
+      &:hover {
+        background-color: darken($primary-color, 10%);
+      }
+    }
+  }
+
+  .table-wrapper {
+
+  }
+
+  .table-container {
+    position: relative;
+    height: calc(100vh - 160px); // Adjust height to fit within the main element
+    background: #ffffff;
+    overflow-y: auto; // Enable vertical scrolling
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 8px;
+    overflow: hidden;
+  }
+
+  thead {
+    position: fixed;
+    top: 158px;
+    right: 0px;
+    width: 85%;
+    background: $secondary-color;
+    color: #fff;
+    font-weight: bold;
+  }
+
+  th, td {
+    padding: 14px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+
+  tbody tr {
+    transition: background-color 0.3s;
 
     &:hover {
-      background-color: darken($primary-color, 10%);
+      background-color: $hover-bg;
+      cursor: pointer;
+    }
+  }
+
+  .exam-name {
+    font-weight: bold;
+    color: #333;
+  }
+
+  td button {
+    padding: 8px 14px;
+    border: none;
+    border-radius: 6px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.2s, transform 0.2s;
+
+    &:first-child {
+      background-color: #ffc107;
+      color: #000;
+      margin-right: 6px;
+    }
+
+    &:last-child {
+      background-color: #dc3545;
+      color: #fff;
+    }
+
+    &:hover {
+      transform: translateY(-2px);
+      opacity: 0.9;
     }
   }
 }
 
-.table-container {
-  height: calc(100vh - 160px); // Adjust height to fit within the main element
-  background: #ffffff;
-  overflow-y: auto; // Enable vertical scrolling
-  padding: 15px;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  border-radius: 8px;
-  overflow: hidden;
-}
-
-thead {
-  position: sticky;
-  top: 0;
-  background: $secondary-color;
-  color: #fff;
-  font-weight: bold;
-}
-
-th, td {
-  padding: 14px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
-}
-
-tbody tr {
-  transition: background-color 0.3s;
-
-  &:hover {
-    background-color: $hover-bg;
-    cursor: pointer;
-  }
-}
-
-.exam-name {
-  font-weight: bold;
-  color: #333;
-}
-
-td button {
-  padding: 8px 14px;
-  border: none;
-  border-radius: 6px;
-  font-size: 14px;
-  cursor: pointer;
-  transition: background-color 0.2s, transform 0.2s;
-
-  &:first-child {
-    background-color: #ffc107;
-    color: #000;
-    margin-right: 6px;
-  }
-
-  &:last-child {
-    background-color: #dc3545;
-    color: #fff;
-  }
-
-  &:hover {
-    transform: translateY(-2px);
-    opacity: 0.9;
-  }
-}
