--- a/src/app/layout/button/create-button/create-button.component.scss
+++ b/src/app/layout/button/create-button/create-button.component.scss
@@ -18,7 +18,7 @@
     &:hover {
       background-color: #0A944F;
       transform: scale(1.05);
-      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     }
 
     &:active {
@@ -34,7 +34,7 @@
       left: -100%;
       width: 100%;
       height: 100%;
-      background: linear-gradient(120deg, transparent, rgba(255, 255, 255, 0.4), transparent);
+      background: linear-gradient(120deg, transparent, rgb(255, 255, 255), transparent);
       transition: left 0.6s ease;
     }
 
