--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.html
@@ -7,6 +7,7 @@
         id="question-number"
         type="number"
         [(ngModel)]="questionNumber"
+        (change)="onQuestionNumberChange($event)"
       />
       <label for="grade">Số điểm</label>
       <input class="number-input" id="grade" type="number" />
