feat: implement student result retrieval and update student ID references

--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/home/home.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/home/home.component.html
@@ -122,7 +122,7 @@
             </thead>
             <tbody>
             <tr *ngFor="let student of StudentInExamSessionEnrollmentsList">
-              <td>{{ student.student_id }}</td>
+              <td>{{ student.student_number }}</td>
               <td>{{ student.class_name }}</td>
               <td>{{ student.student_name }}</td>
             </tr>
