feat: add edit exam functionality and improve exam creation process

--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.html
@@ -31,7 +31,7 @@
           <td>{{ exam.type }}</td>
           <td>{{ exam.createDate | date:'dd/MM/yyyy' }}</td>
           <td>
-            <button>sửa</button>
+            <button (click)="editExam(exam.id, this.exam_session_id)">Sửa</button>
             <button>xóa</button>
           </td>
         </tr>
