--- a/src/app/pages/teacher/exam/with-file/edit-exam-with-file/edit-exam-with-file.component.html
+++ b/src/app/pages/teacher/exam/with-file/edit-exam-with-file/edit-exam-with-file.component.html
@@ -30,17 +30,25 @@
       />
     </div>
 
-    <!-- Chỉ hiển thị PDF nếu có file PDF -->
-    <div *ngIf="selectedFileUrl" class="pdf-preview-container">
-      <iframe [src]="selectedFileUrl"></iframe>
-    </div>
+    <ngx-doc-viewer *ngIf="selectedFileUrl && selectedFileUrl.includes('blob:')"
+                    [url]="selectedFileUrl"
+                    viewer="url"
+                    style="width:100%; height:570px;">
+    </ngx-doc-viewer>
 
-    <!-- Chỉ hiển thị Word nếu không có PDF -->
+    <ngx-doc-viewer *ngIf="fileUrl && !selectedFileUrl"
+                    [url]="fileUrl"
+                    viewer="url"
+                    style="width:100%; height:570px;">
+    </ngx-doc-viewer>
+
+    <!-- Only display Word if no PDF is selected -->
     <div
       #wordContainer
-      *ngIf="!selectedFileUrl"
+      *ngIf="!selectedFileUrl || !selectedFileUrl.includes('blob:')"
       class="word-preview-container"
-    ></div>
+      style="width:100%; height:570px; overflow:auto;">
+    </div>
   </div>
 
   <!-- Right content -->
@@ -220,7 +228,6 @@
               </div>
             </div>
           </div>
-
 
           <button [disabled]="examForm.invalid" type="submit">Tạo kỳ thi</button>
         </form>
