--- a/src/app/pages/teacher/exam/with-file/edit-exam-with-file/edit-exam-with-file.component.html
+++ b/src/app/pages/teacher/exam/with-file/edit-exam-with-file/edit-exam-with-file.component.html
@@ -18,7 +18,7 @@
   <div class="left-container">
     <div class="upload-file-container">
       <button (click)="uploadFile()" class="upload-button">
-        📂 Tải lại file
+        📂 Tải lên file mới
       </button>
       <input
         #fileInput
@@ -26,29 +26,22 @@
         accept=".pdf,.doc,.docx"
         hidden
         id="fileInput"
-        type="file"
-      />
+        type="file">
+      <button (click)="reloadFile()" class="reload-button">
+        🔄 Tải lại file
+      </button>
+    </div>
+    <!-- Hiển thị file lấy từ url Backend-->
+    <ngx-doc-viewer *ngIf="!changeFile" [url]="uploadFileUrl" viewer="url" style="width:100%; height:570px;"></ngx-doc-viewer>
+
+
+    <!-- Chỉ hiển thị PDF nếu có file PDF -->
+    <div *ngIf="selectedFileUrl" class="pdf-preview-container">
+      <iframe [src]="selectedFileUrl"></iframe>
     </div>
 
-    <ngx-doc-viewer *ngIf="selectedFileUrl && selectedFileUrl.includes('blob:')"
-                    [url]="selectedFileUrl"
-                    viewer="url"
-                    style="width:100%; height:570px;">
-    </ngx-doc-viewer>
-
-    <ngx-doc-viewer *ngIf="fileUrl && !selectedFileUrl"
-                    [url]="fileUrl"
-                    viewer="url"
-                    style="width:100%; height:570px;">
-    </ngx-doc-viewer>
-
-    <!-- Only display Word if no PDF is selected -->
-    <div
-      #wordContainer
-      *ngIf="!selectedFileUrl || !selectedFileUrl.includes('blob:')"
-      class="word-preview-container"
-      style="width:100%; height:570px; overflow:auto;">
-    </div>
+    <!-- Chỉ hiển thị Word nếu không có PDF -->
+    <div #wordContainer *ngIf="!selectedFileUrl" class="word-preview-container"></div>
   </div>
 
   <!-- Right content -->
