--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
@@ -6,10 +6,10 @@
       <div class="input-wrap">
         <label class="form-desc" for="exam-name">Tên bài thi</label>
         <input
-          id="exam-name"
-          type="text"
           [(ngModel)]="examName"
+          id="exam-name"
           name="examName"
+          type="text"
         />
       </div>
 
@@ -18,10 +18,10 @@
         <div (click)="toggleExamTypeList()" class="list-wrap">
           {{ selectedExamType || "Chọn loại bài thi" }}
           <ul class="exam-type-list active" id="examTypeList">
-            <li class="type" (click)="selectExamType('15 phút')">15 phút</li>
-            <li class="type" (click)="selectExamType('45 phút')">45 phút</li>
-            <li class="type" (click)="selectExamType('60 phút')">60 phút</li>
-            <li class="type" (click)="selectExamType('90 phút')">90 phút</li>
+            <li (click)="selectExamType('15 phút')" class="type">15 phút</li>
+            <li (click)="selectExamType('45 phút')" class="type">45 phút</li>
+            <li (click)="selectExamType('60 phút')" class="type">60 phút</li>
+            <li (click)="selectExamType('90 phút')" class="type">90 phút</li>
           </ul>
         </div>
       </div>
@@ -29,10 +29,10 @@
       <div class="input-wrap">
         <label class="form-desc" for="exam-password">Mật khẩu bài thi</label>
         <input
-          id="exam-password"
-          type="password"
           [(ngModel)]="examPassword"
+          id="exam-password"
           name="examPassword"
+          type="password"
         />
       </div>
 
