feat: enhance exam file upload and preview functionality

--- a/src/app/pages/teacher/exam/with-file/edit-exam-with-file/edit-exam-with-file.component.html
+++ b/src/app/pages/teacher/exam/with-file/edit-exam-with-file/edit-exam-with-file.component.html
@@ -11,7 +11,7 @@
   </div>
 </header>
 
-<app-loading *ngIf="loading" text="🌟Creating exam..."></app-loading>
+<app-loading *ngIf="loading" text="✍️Updating exam..."></app-loading>
 
 <div class="container">
   <!-- Left content -->
@@ -222,7 +222,7 @@
             </div>
           </div>
 
-          <button [disabled]="examForm.invalid" type="submit">Tạo kỳ thi</button>
+          <button [disabled]="examForm.invalid" type="submit">Sửa thông tin</button>
         </form>
       </div>
     </div>
