--- a/src/app/layout/loadings/loading/loading.component.scss
+++ b/src/app/layout/loadings/loading/loading.component.scss
@@ -4,13 +4,22 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(135deg, #00a19c, #006149, #00532a, #007143, #04aa6d);
+  z-index: 1000;
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1000;
   animation: fadeIn 0.5s ease-in-out;
+
+  &::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(135deg, #00a19c, #006149, #00532a, #007143, #04aa6d);
+    opacity: 1;
+    z-index: -1;
+  }
 }
+
 
 .loading-content {
   display: flex;
