--- a/src/app/layout/loadings/loading/loading.component.html
+++ b/src/app/layout/loadings/loading/loading.component.html
@@ -1,5 +1,5 @@
 <div class="loading-overlay">
-  <div class="loading-content">
+  <div class="loading-circle">
     <div class="spinner-container">
       <div class="spinner"></div>
       <div class="static-cat"></div>
