--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.scss
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam/exam.component.scss
@@ -5,6 +5,7 @@ $hover-bg: #f1faff;
 
 .container {
   position: relative;
+  padding-top: 80px;
 
   .search-bar {
     display: flex;
@@ -93,7 +94,6 @@ $hover-bg: #f1faff;
     th {
       padding: 14px;
       text-align: left;
-      border-bottom: 1px solid #ddd;
     }
   }
 
@@ -136,18 +136,9 @@ $hover-bg: #f1faff;
     border-radius: 6px;
     font-size: 14px;
     cursor: pointer;
+    background: #ed3535;
+    color: #ffffff;
     transition: background-color 0.2s, transform 0.2s;
-
-    &:first-child {
-      background-color: #ffc107;
-      color: #000;
-      margin-right: 6px;
-    }
-
-    &:last-child {
-      background-color: #dc3545;
-      color: #fff;
-    }
 
     &:hover {
       transform: translateY(-2px);
@@ -155,3 +146,4 @@ $hover-bg: #f1faff;
     }
   }
 }
+
