--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/home/home.component.scss
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/home/home.component.scss
@@ -1,10 +1,10 @@
 .container {
   width: 100%;
-  height: 100vh;
+  //height: 150vh;
   background: #fff;
 
   .form-wrap {
-    padding: 20px 40px 0 40px;
+    padding: 40px 40px 40px 40px;
   }
 
   .exam-info {
@@ -141,7 +141,7 @@
   }
 
   .participating-student-list {
-    max-height: calc(100vh - 250px); // Điều chỉnh theo khoảng trống trang
+    max-height: calc(100vh - 250px);
     overflow-y: auto;
 
     .participating-student__heading {
