feat: add totalQuestions field to exam model and update related components for exam creation and editing

--- a/src/app/pages/teacher/exam/with-file/edit-exam-with-file/edit-exam-with-file.component.html
+++ b/src/app/pages/teacher/exam/with-file/edit-exam-with-file/edit-exam-with-file.component.html
@@ -106,6 +106,7 @@
               [(ngModel)]="quickInputText"
               class="quick-input-area"
               placeholder="Nhập đáp án tại đây..."
+              [attr.maxlength]="totalQuestions"
             ></textarea>
             <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
             <p class="answer-count">
