--- a/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.html
+++ b/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.html
@@ -105,6 +105,7 @@
               [(ngModel)]="quickInputText"
               class="quick-input-area"
               placeholder="Nhập đáp án tại đây..."
+              [attr.maxlength]="totalQuestions"
             ></textarea>
             <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
             <p class="answer-count">
