feat: update exam session parameters in routing and components for improved navigation

--- a/src/app/pages/teacher/exam/with-file/edit-exam-with-file/edit-exam-with-file.component.html
+++ b/src/app/pages/teacher/exam/with-file/edit-exam-with-file/edit-exam-with-file.component.html
@@ -3,7 +3,7 @@
     <div class="logo">Online Exam Portal</div>
     <nav class="breadcrumb">
       <span>►</span>
-      <span>Chỉnh sửa đề thi</span>
+      <span>{{exam_name}}</span>
     </nav>
   </div>
   <div class="return-button">
