--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.html
@@ -4,7 +4,7 @@
     <div class="logo">Online Exam Portal</div>
     <nav class="breadcrumb">
       <span>►</span>
-      <span>Kỳ thi: {{exam_name}}-{{exam_description}}</span>
+      <span>Kỳ thi: {{exam_session_name}}-{{exam_session_description}}</span>
     </nav>
   </div>
   <div class="return-button">
@@ -27,10 +27,9 @@
   </ul>
 </div>
 <main>
-  <app-home *ngIf="activeTab === 'home'" [exam_session_id]="exam_session_id"></app-home>
-  <app-student-list-point *ngIf="activeTab === 'student-list-point'"
-                          [exam_session_id]="exam_session_id"></app-student-list-point>
-  <app-exam *ngIf="activeTab === 'exam'" [exam_session_id]="exam_session_id"></app-exam>
+  <app-home *ngIf="activeTab === 'home'" [exam_session_id]="exam_session_id" [exam_session_name]="exam_session_name" [exam_session_description]="exam_session_description"></app-home>
+  <app-student-list-point *ngIf="activeTab === 'student-list-point'" [exam_session_id]="exam_session_id" [exam_name]="exam_session_name" [exam_description]="exam_session_description"></app-student-list-point>
+  <app-exam *ngIf="activeTab === 'exam'" [exam_session_id]="exam_session_id" [exam_session_name]="exam_session_name" [exam_session_description]="exam_session_description"></app-exam>
   <app-question-bank *ngIf="activeTab === 'question-bank'"></app-question-bank>
 </main>
 </body>
