--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.scss
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.scss
@@ -28,6 +28,21 @@ li {
       font-weight: 600;
       color: #fff;
     }
+
+    .edit-button {
+      margin-left: 700px;
+      width: 150px;
+      height: 40px;
+      outline: none;
+      border: none;
+      border-radius: 5px;
+      background: #fff;
+      cursor: pointer;
+    }
+
+    .edit-button:hover {
+      opacity: 0.9;
+    }
   }
 
   .question-list-wrap {
