--- a/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
+++ b/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
@@ -9,7 +9,7 @@
     </nav>
   </div>
   <div class="return-button">
-    <button (click)="goBack()">quay lại</button>
+    <button (click)="goBack()">Quay lại</button>
   </div>
 </header>
 <div class="exam-create-container">
